syntax = "proto3";
package proto.board;
import "google/protobuf/empty.proto";

option java_multiple_files = true;

message CreateBoardRequest{
    string title = 1;
    string creator_id = 2;
}
message GetAllBoards{}

service BoardService{
    rpc createBoard (CreateBoardRequest) returns (google.protobuf.Empty);
    rpc getAllBoards ()
}

